@@ -29,12 +29,12 @@ class RspecResourceGenerator < Rails::Generator::NamedBase
     end
     
     if ActionView::Base.const_defined?('DEFAULT_TEMPLATE_HANDLER_PREFERENCE') &&
-       ActionView::Base::DEFAULT_TEMPLATE_HANDLER_PREFERENCE.include?('erb') then
-      @rails_resource = "resource"
+       ActionView::Base::DEFAULT_TEMPLATE_HANDLER_PREFERENCE.include?(:erb) then
+      @resource_generator = "scaffold"
       @default_file_extension = "html.erb"
       @resource_edit_path = "/edit"
     else
-      @rails_resource = "scaffold_resource"
+      @resource_generator = "scaffold_resource"
       @default_file_extension = "rhtml"
       @resource_edit_path = ";edit"
     end
@@ -54,6 +54,7 @@ class RspecResourceGenerator < Rails::Generator::NamedBase
       m.directory(File.join('app/views', controller_class_path, controller_file_name))
       m.directory(File.join('spec/controllers', controller_class_path))
       m.directory(File.join('spec/models', class_path))
+      m.directory(File.join('spec/helpers', class_path))
       m.directory File.join('spec/fixtures', class_path)
       m.directory File.join('spec/views', controller_class_path, controller_file_name)
       
@@ -61,15 +62,18 @@ class RspecResourceGenerator < Rails::Generator::NamedBase
       m.template 'rspec_resource:controller_spec.rb',
         File.join('spec/controllers', controller_class_path, "#{controller_file_name}_controller_spec.rb")
 
-      m.template "#{@rails_resource}:controller.rb",
+      m.template "#{@resource_generator}:controller.rb",
         File.join('app/controllers', controller_class_path, "#{controller_file_name}_controller.rb")
 
-        m.template "#{@rails_resource}:helper.rb",
+      m.template 'rspec_resource:helper_spec.rb',
+        File.join('spec/helpers', class_path, "#{controller_file_name}_helper_spec.rb")
+
+      m.template "#{@resource_generator}:helper.rb",
         File.join('app/helpers', controller_class_path, "#{controller_file_name}_helper.rb")
 
       for action in scaffold_views
         m.template(
-          "#{@rails_resource}:view_#{action}.#{@default_file_extension}",
+          "#{@resource_generator}:view_#{action}.#{@default_file_extension}",
           File.join('app/views', controller_class_path, controller_file_name, "#{action}.#{default_file_extension}")
         )
       end
