@@ -1,0 +1,4 @@
+require File.dirname(__FILE__) + '<%= '/..' * class_nesting_depth %>/../spec_helper'
+
+describe <%= controller_class_name %>Helper do
+end
