@@ -567,126 +567,6 @@ describe "have_rjs behaviour", :behaviour_type => :controller do
   end
 end
 
-describe "be_feed behaviour", :behaviour_type => :controller do
-  include AssertSelectSpecHelpers
-  controller_name :assert_select
-  integrate_views
-
-  it "should support atom 1.0" do
-    # Atom 1.0.
-    render_xml %Q{<feed xmlns="http://www.w3.org/2005/Atom"><title>test</title></feed>}
-    response.should be_feed(:atom)
-    response.should be_feed(:atom, 1.0)
-    response.should be_feed(:atom, 1.0) {
-      with_tag("feed>title", "test")
-    }
-
-    lambda {
-      response.should be_feed(:atom, 0.3)
-    }.should raise_error(SpecFailed)
-
-    lambda {
-      response.should be_feed(:rss)
-    }.should raise_error(SpecFailed)
-  end
-  
-  it "should support atom 0.3" do
-    render_xml %Q{<feed version="0.3"><title>test</title></feed>}
-    response.should be_feed(:atom, 0.3)
-    response.should be_feed(:atom, 0.3) { with_tag("feed>title", "test") }
-
-    lambda { response.should be_feed(:atom) }.should raise_error(SpecFailed)
-    lambda { response.should be_feed(:atom, 1.0) }.should raise_error(SpecFailed)
-    lambda { response.should be_feed(:rss) }.should raise_error(SpecFailed)
-  end
-  
-  it "should support rss 2.0" do
-    render_xml %Q{<rss version="2.0"><channel><title>test</title></channel></rss>}
-    response.should be_feed(:rss)
-    response.should be_feed(:rss, 2.0)
-    response.should be_feed(:rss, 2.0) { with_tag("rss>channel>title", "test") }
-
-    lambda { response.should be_feed(:rss, 0.92) }.should raise_error(SpecFailed)
-    lambda { response.should be_feed(:atom) }.should raise_error(SpecFailed)
-  end
-  
-  it "should support rss 0.92" do
-    render_xml %Q{<rss version="0.92"><channel><title>test</title></channel></rss>}
-    response.should be_feed(:rss, 0.92)
-    response.should be_feed(:rss, 0.92) { with_tag("rss>channel>title", "test") }
-
-    lambda { response.should be_feed(:rss) }.should raise_error(SpecFailed)
-    lambda { response.should be_feed(:rss, 2.0) }.should raise_error(SpecFailed)
-    lambda { response.should be_feed(:atom) }.should raise_error(SpecFailed)
-  end
-
-  it "should support encoded feed items" do
-    render_xml <<-EOF
-<rss version="2.0">
-  <channel>
-    <item>
-      <description>
-        <![CDATA[
-          <p>Test 1</p>
-        ]]>
-      </description>
-    </item>
-    <item>
-      <description>
-        <![CDATA[
-          <p>Test 2</p>
-        ]]>
-      </description>
-    </item>
-  </channel>
-</rss>
-EOF
-    response.should be_feed(:rss, 2.0) do
-      with_tag("channel item description") do
-        # Test element regardless of wrapper.
-        with_encoded do
-          with_tag("p", :count=>2, :text=>/Test/)
-        end
-        # # Test through encoded wrapper.
-        with_encoded do
-          with_tag("encoded p", :count=>2, :text=>/Test/)
-        end
-        # # Use :root instead (recommended)
-        with_encoded do
-          with_tag(":root p", :count=>2, :text=>/Test/)
-        end
-        # # Test individually.
-        with_tag("description") do |elements|
-          with_encoded do
-            with_tag("p", "Test 1")
-          end
-          with_encoded do
-            with_tag("p", "Test 2")
-          end
-          
-        end
-      end
-      
-      lambda do
-        response.should be_feed(:rss, 2.0) do
-          with_encoded do
-            with_tag("p", :count=>37, :text=>/Test/)
-          end
-        end
-      end.should raise_error(SpecFailed, /37.*0/)
-      
-    end
-    # Test that we only un-encode element itself.
-    response.should be_feed(:rss, 2.0) {
-      with_tag("channel item") {
-        with_encoded {
-          with_tag("p", 0)
-        }
-      }
-    }
-  end
-end
-
 describe "send_email behaviour", :behaviour_type => :controller do
   include AssertSelectSpecHelpers
   controller_name :assert_select
